--- a/thesillyhome-addon/config.yaml
+++ b/thesillyhome-addon/config.yaml
@@ -1,5 +1,5 @@
 name: thesillyhome addon
-version: "1.0.0"
+version: "1.0.1"
 slug: thesillyhome
 description: "thesillyhome add-on"
 url: "https://github.com/lcmchris/thesillyhome-addon-repo"
@@ -32,4 +32,4 @@ schema:
       db_host: str
       db_port: str
       db_database: str
-# image: "ghrc.io/lcmchris/{arch}-thesillyhome"
+image: "ghrc.io/lcmchris/{arch}-thesillyhome"
