--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: Example Home Assistant add-on repository
-url: "https://github.com/lcmchris/thesillyhome/tree/master/src/routine_predictor"
+name: The silly home add-on repository
+url: "https://github.com/lcmchris/thesillyhome-addon-repo"
 maintainer: Christopher Lai <lcmchristopher@gmail.com>
