Use F-string and remove dependecy on all models

--- a/thesillyhome-addon/config.yaml
+++ b/thesillyhome-addon/config.yaml
@@ -32,4 +32,4 @@ schema:
       db_host: str
       db_port: str
       db_database: str
-image: "lcmchris1/{arch}-thesillyhome"
+# image: "lcmchris1/{arch}-thesillyhome"
