--- a/thesillyhome-addon/config.yaml
+++ b/thesillyhome-addon/config.yaml
@@ -4,6 +4,7 @@ slug: thesillyhome
 description: "thesillyhome add-on"
 url: "https://github.com/lcmchris/thesillyhome-addon-repo"
 homeassistant_api: true
+init: false
 arch:
   - armhf
   - armv7
@@ -12,15 +13,34 @@ arch:
   - i386
 options:
   actuactors_id:
-    - "light.bedroom_1"
+    - light.bathroom_lights
+    - light.corridor_lights
+    - light.hallway_lights
+    - switch.livingroom_entrance_switch_right
+    - switch.livingroom_entrance_switch_center
+    - switch.livingroom_entrance_switch_left
+    - light.bedroom_sidetable_lamp
+    - light.bedroom_ceiling_light
   sensors_id:
-    - "weather.home"
+    - sensor.corridor_end_sensor_illuminance_lux
+    - binary_sensor.corridor_end_sensor_occupancy
+    - sensor.corridor_entrance_sensor_illuminance_lux
+    - binary_sensor.corridor_entrance_sensor_occupancy
+    - sensor.livingroom_desk_sensor_illuminance_lux
+    - binary_sensor.livingroom_desk_sensor_occupancy
+    - sensor.bedroom_entrance_sensor_illuminance_lux
+    - binary_sensor.bedroom_entrance_sensor_occupancy
+    - sensor.bathroom_entrance_sensor_illuminance_lux
+    - binary_sensor.bathroom_entrance_sensor_occupancy
+    - binary_sensor.chris_phone_is_charging
+    - device_tracker.chris_phone
+    - weather.home
   db_options:
-    - db_password: ""
-      db_username: ""
-      db_host: ""
-      db_port: ""
-      db_database: ""
+    - db_password: XXXX
+      db_username: homeassistant
+      db_host: 192.168.1.100
+      db_port: '3306'
+      db_database: homeassistant
 schema:
   actuactors_id:
     - str
