--- a/thesillyhome-addon-dev/config.yaml
+++ b/thesillyhome-addon-dev/config.yaml
@@ -5,6 +5,8 @@ description: "thesillyhome add-on dev"
 url: "https://github.com/lcmchris/thesillyhome-addon-repo"
 homeassistant_api: true
 init: false
+environment:
+  HA_ADDON: "true"
 arch:
   - armhf
   - armv7
