--- a/thesillyhome-addon-dev/config.yaml
+++ b/thesillyhome-addon-dev/config.yaml
@@ -15,7 +15,6 @@ options:
   actuactors_id:
     - light.bathroom_lights
     - light.corridor_lights
-    - light.hallway_lights
     - switch.livingroom_entrance_switch_right
     - switch.livingroom_entrance_switch_center
     - switch.livingroom_entrance_switch_left
@@ -41,6 +40,7 @@ options:
       db_host: 192.168.1.100
       db_port: "3306"
       db_database: homeassistant
+      db_type: mariadb
 schema:
   actuactors_id:
     - str
@@ -52,4 +52,5 @@ schema:
       db_host: str
       db_port: str
       db_database: str
+      db_type: str
 # image: "lcmchris1/{arch}-thesillyhome"
