--- a/thesillyhome-addon-dev/config.yaml
+++ b/thesillyhome-addon-dev/config.yaml
@@ -1,5 +1,5 @@
 name: thesillyhome addon dev
-version: "2.0.4-dev"
+version: "2.0.5-dev"
 slug: thesillyhome_dev
 description: "thesillyhome add-on dev"
 url: "https://github.com/lcmchris/thesillyhome-addon-repo"
@@ -45,8 +45,9 @@ options:
       db_port: "3306"
       db_database: homeassistant
       db_type: mariadb
-  autotrain: "true"
+  autotrain: true
   autotrain_cadence: "0 0 * * 0"
+  share_data: true
 schema:
   actuactors_id:
     - str
@@ -59,4 +60,4 @@ schema:
       db_port: str
       db_database: str
       db_type: str
-# image: "lcmchris1/{arch}-thesillyhome"
+image: "lcmchris1/{arch}-thesillyhome-dev"
