Removing Non-dev version

--- a/thesillyhome-addon-dev/config.yaml
+++ b/thesillyhome-addon-dev/config.yaml
@@ -16,6 +16,8 @@ arch:
   - armv7
   - aarch64
 options:
+  username: XXXXXXXX
+  password: XXXXXXXX
   actuactors_id:
     - light.bathroom_lights
     - light.corridor_lights
